@@ -78,6 +78,8 @@ Draws a line on a surface. This will respect the clipping
 rectangle. A bounding box of the effected area is returned
 as a rectangle.
 <br>&nbsp;<br>
+The color argument can be either a RGB sequence or mapped color integer.
+<br>&nbsp;<br>
 This function will temporarily lock the surface.
 </ul><br>&nbsp;<br>
 
@@ -91,6 +93,8 @@ and if true, a line will be draw between the first and last points.
 <br>&nbsp;<br>
 This will respect the clipping rectangle. A bounding box of the
 effected area is returned as a rectangle.
+<br>&nbsp;<br>
+The color argument can be either a RGB sequence or mapped color integer.
 <br>&nbsp;<br>
 This function will temporarily lock the surface.
 </ul><br>&nbsp;<br>
